# advanced-pid-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml
examples/: pid.rs  pid_with_limits.rs  simple.rs  simulation.rs  simulation_with_instant.rs  vel_pid.rs
scripts/: bump-version.bash
src/: config.rs  i_pd.rs  lib.rs  pi_d.rs  pid.rs  prelude.rs  vel_pid.rs
