[package]
name = "advanced-pid"
version = "0.1.0"
authors = ["teruyamato0731"]
edition = "2021"
description = "A simple PID controller library for Rust."
readme = "README.md"
repository = "https://github.com/teruyamato0731/advanced-pid-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advanced_pid"
path = "src/lib.rs"

[features]
default = ["std", "f32"]
std = []
f32 = []
f64 = []

[dependencies]

[dev-dependencies]
